@@ -122,7 +122,7 @@
 	    <widget>
 	      <class>GtkMenuItem</class>
 	      <name>open_map1</name>
-	      <tooltip>Open a pre-calculated CCP4 map</tooltip>
+	      <tooltip>Open a pre-calculated CCP4 map or CNS (&quot;.cns&quot;) map</tooltip>
 	      <signal>
 		<name>activate</name>
 		<handler>on_open_map1_activate</handler>
